--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<div class="container mt-5">
+<!-- <div class="container mt-5">
     <table class="table table-striped table-dark">
     <thead>
     <tr>
@@ -22,4 +22,4 @@
     </tr>
     </tbody>
     </table>
-    </div>
+    </div> -->
