--- a/src/app/user/user.component.html
+++ b/src/app/user/user.component.html
@@ -1,4 +1,4 @@
-<!-- <div class="container mt-5">
+<div class="container mt-5">
     <table class="table table-striped table-dark">
     <thead>
     <tr>
@@ -11,8 +11,8 @@
     </tr>
     </thead>
     <tbody>
-    <td>{{u.id}}</td>
     <tr *ngFor="let u of users">
+    <td>{{u.id}}</td>
     <td>{{u.id}}</td>
     <td>{{u.name}} </td>
     <td>{{u.username}}</td>
@@ -22,4 +22,4 @@
     </tr>
     </tbody>
     </table>
-    </div> -->
+    </div>
